# AGDeltaX

./: .gitignore  Dockerfile  README.md  coins_model.bash  default.json  final_model.bash  frames_2026-02-19_14.09.27.gv  frames_2026-02-20_17.08.28.gv  frames_2026-03-13_16.23.53.gv  frames_2026-03-19_16.33.12.gv  frames_2026-03-19_16.45.13.gv  frames_2026-04-09_16.23.42.gv  frames_2026-04-09_16.25.04.gv  frames_2026-04-09_16.28.48.gv  frames_2026-04-09_16.34.48.gv  frames_2026-04-09_16.49.15.gv  frames_2026-04-09_16.52.11.gv  frames_2026-04-15_13.07.01.gv  readme.md  realsense.bash  sample_launch.bash  tiled_model.bash
archive/dx_calibrate_pkg/: CMakeLists.txt
archive/dx_calibrate_pkg/include/dx_calibrate_pkg/: charuco_detector_node.hpp
archive/dx_calibrate_pkg/src/: charuco_detector_node.cpp  main.cpp
archive/dx_camera_pkg/: package.xml  setup.cfg
archive/dx_camera_pkg/config/: dummy.yaml
archive/dx_camera_pkg/launch/: usb_cam_launch.xml
archive/robot_sensor_pkg/: package.xml  setup.py
archive/robot_sensor_pkg/robot_sensor_pkg/: connection.py  drive_motor_v2.py  dxon.py
archive/transforms_pkg/transforms_pkg/: homography_generator.py  yolo_pixel_to_mm.py
src/deltax_main_pkg/: package.xml  setup.cfg  setup.py
src/deltax_main_pkg/deltax_main_pkg/: claw.py  robot_poll.py  send_ts.py
src/dx_calibrate_pkg/: package.xml
src/dx_camera_pkg/: requirements.txt  setup.py
src/dx_interfaces/: CMakeLists.txt  package.xml
src/robot_sensor_pkg/: package.xml  setup.cfg  setup.py
src/transforms_pkg/: package.xml  setup.cfg  setup.py
(+25 files in other folders)
